<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cookrecipes.RecipeInfo"
    tools:ignore="ContentDescription">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/CollapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/recipeCollapsingImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout style="@style/recipe_info_LinearLayout_style">

            <android.support.v7.widget.CardView style="@style/CardViewStyle">

                <LinearLayout style="@style/recipe_info_LinearLayout_style">

                    <TextView
                        style="@style/TextView_largeText_style"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/recipe_description_text"
                        style="@style/TextView_mediumText_style" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardViewStyle">

                <LinearLayout style="@style/recipe_info_LinearLayout_style">

                    <TextView
                        android:id="@+id/recipe_category_text"
                        style="@style/TextView_mediumText_style"
                        android:textColor="@android:color/black"
                        tools:text="@string/category" />

                    <TextView
                        android:id="@+id/recipe_subCategory_text"
                        style="@style/TextView_mediumText_style"
                        android:textColor="@android:color/black"
                        tools:text="@string/sub_category" />

                    <TextView
                        android:id="@+id/recipe_rating_text"
                        style="@style/TextView_mediumText_style"
                        android:textColor="@android:color/black"
                        tools:text="@string/rating" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardViewStyle">

                <LinearLayout style="@style/recipe_info_LinearLayout_style">

                    <TextView
                        style="@style/TextView_largeText_style"
                        android:text="@string/ingredients" />

                    <TextView
                        android:id="@+id/recipe_ingredients_text"
                        style="@style/TextView_mediumText_style"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardViewStyle">

                <LinearLayout style="@style/recipe_info_LinearLayout_style">

                    <TextView
                        style="@style/TextView_largeText_style"
                        android:text="@string/instructions" />

                    <TextView
                        android:id="@+id/recipe_instructions_text"
                        style="@style/TextView_mediumText_style"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
